{{$NEXT}}

v0.0.3    2013-06-06 18:26:18 UTC

  - Interpolation.
  - Positron::Expression::reduce method added
  - More documentation.

v0.0.2    2013-05-21 17:59:14 UTC

  Minor release, making the Perl version explicit (for cpantesters),
  and adding some build infrastructure.

v0.0.1    2013-05-17 13:49:50 UTC

  First version, about half of Positron::DataTemplate usable