@@ -37,5 +37,23 @@ is_deeply( $env->get('key2'), ['value2', 'value3'] , "Scalar value retrieved");
 lives_ok { $env->set('key1', 'newvalue') } "Immutable lives on set";
 is( $env->get('key1'), 'newvalue', "New scalar value retrieved");
 
+lives_and {
+    $env = Positron::Environment->new(
+        "a string as data",
+    );
+    $env->set('string', 'new value');
+    is($env->{'data'}, 'a string as data');
+} "No change when setting on a string environment";
+
+lives_and {
+    $env = Positron::Environment->new(
+        [2, 3, 5, 7, 11],
+    );
+    ok($env);
+} "Constructor works with array data";
+lives_and { $env->set(1, 13); is_deeply($env->{'data'}, [2, 13, 5, 7, 11]) } "Can set by index";
+lives_and { $env->set('string', 13); is_deeply($env->{'data'}, [13, 13, 5, 7, 11]) } "Can implicitly set by non-numeric index";
+lives_and { $env->set(3.2, 17); is_deeply($env->{'data'}, [13, 13, 5, 17, 11]) } "Can set by non-integer index";
+lives_and { $env->set(-1, 19); is_deeply($env->{'data'}, [13, 13, 5, 17, 19]) } "Can set by negative index";
 done_testing();
 
